[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/actions.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/buttons/feedButton.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/buttons/playButton.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/ui/buttons/scoldButton.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/ui/buttons/releaseButton.png" type="Texture" id=5]

[node name="actions" type="Control"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="background" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Visibility" ]

[node name="vbox" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 160, 144 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect", "Size Flags" ]

[node name="feedButton" type="TextureButton" parent="vbox" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 160.0
margin_bottom = 32.0
rect_min_size = Vector2( 160, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="playButton" type="TextureButton" parent="vbox" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 160.0
margin_bottom = 68.0
rect_min_size = Vector2( 160, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="scoldButton" type="TextureButton" parent="vbox" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 72.0
margin_right = 160.0
margin_bottom = 104.0
rect_min_size = Vector2( 160, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[node name="releaseButton" type="TextureButton" parent="vbox" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 108.0
margin_right = 160.0
margin_bottom = 140.0
rect_min_size = Vector2( 160, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
stretch_mode = 5
_sections_unfolded = [ "Rect", "Textures" ]

[connection signal="pressed" from="vbox/feedButton" to="." method="_on_feedButton_pressed"]

[connection signal="pressed" from="vbox/playButton" to="." method="_on_playButton_pressed"]

[connection signal="pressed" from="vbox/scoldButton" to="." method="_on_scoldButton_pressed"]

[connection signal="pressed" from="vbox/releaseButton" to="." method="_on_releaseButton_pressed"]


